--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
+
+
 {
   "name": "task-manager-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
